<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.huang.rockpaperscissors.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:id="@+id/about_button"
        android:layout_alignParentBottom="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/rock_imagebutton"
        android:src="@drawable/rock"
        android:layout_above="@+id/result"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/paper_imagebutton"
        android:src="@drawable/paper"
        android:layout_alignTop="@+id/rock_imagebutton"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/scissor_imagebutton"
        android:src="@drawable/scissor"
        android:layout_alignTop="@+id/paper_imagebutton"
        android:layout_alignStart="@+id/human_imageview"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_imageView"
        android:src="@drawable/default_picture"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width = "100dp"
        android:layout_height= "100dp"
        android:id="@+id/computer_imageview"
        android:src="@drawable/nopic"
        android:layout_below="@+id/title_imageView"
        android:layout_alignParentStart="true"
        tools:ignore="ContentDescription" />


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/human_imageview"
        android:src="@drawable/nopic"
        android:layout_below="@+id/title_imageView"
        android:layout_alignEnd="@+id/title_imageView"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/start_imagebutton"
        android:src="@drawable/vs"
        android:layout_alignTop="@+id/human_imageview"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computer_textview_label"
        android:textSize="15sp"
        android:id="@+id/computer_textview"
        android:textAlignment="center"
        android:layout_below="@+id/computer_imageview"
        android:layout_alignEnd="@+id/computer_imageview" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/human_textview_label"
        android:id="@+id/human_textView"
        android:textSize="15sp"
        android:textAlignment="center"
        android:layout_alignTop="@+id/computer_textview"
        android:layout_alignStart="@+id/human_imageview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/count"
        android:id="@+id/count"
        android:layout_above="@+id/paper_imagebutton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:id="@+id/result"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status_seekBar"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:enabled="false"/>


</RelativeLayout>
